# multi-agent-circle-sandbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/maddpg/: setup.py
code/multiagent-particle-envs/: setup.py
docs/: presentation.md
docs/assets/: bg.avif
docs/videos/: experiment_1.avi  experiment_10.avi  experiment_2.avi  experiment_3.avi  experiment_4.avi  experiment_5.avi  experiment_6.avi  experiment_7.avi  experiment_8.avi  experiment_9.avi
scripts/: launch_tensorboard.py  record_scenarios.py
test_circle_sandbox/: .data-00000-of-00001  .index
test_circle_sandbox/best_model/: .data-00000-of-00001  .index
test_circle_sandbox/tensorboard/: events.out.tfevents.1716459972.GODJAM-DESKTOP
test_circle_sandbox_1/: .data-00000-of-00001  .index
test_circle_sandbox_1/best_model/: .data-00000-of-00001  .index
test_circle_sandbox_1/tensorboard/: events.out.tfevents.1716012210.GODJAM-DESKTOP
test_circle_sandbox_2/: .data-00000-of-00001  .index  checkpoint
test_circle_sandbox_2/tensorboard/: events.out.tfevents.1716014111.GODJAM-DESKTOP
test_circle_sandbox_3/: .data-00000-of-00001  .index
test_circle_sandbox_3/best_model/: .data-00000-of-00001  .index
test_circle_sandbox_3/tensorboard/: events.out.tfevents.1716042941.GODJAM-DESKTOP
test_circle_sandbox_4/: .data-00000-of-00001  .index
test_circle_sandbox_5/: .data-00000-of-00001  .index
test_circle_sandbox_6/: .data-00000-of-00001  .index
test_circle_sandbox_7/: .data-00000-of-00001  .index
test_circle_sandbox_8/: .data-00000-of-00001  .index
(+37 files in other folders)
